--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,10 @@ plugins {
 
 android {
     compileSdk compile_sdk_version
-    namespace 'com.sceyt.chat.ui'
+    namespace 'com.sceyt.chat.demo'
 
     defaultConfig {
-        applicationId "com.sceyt.chat.ui"
+        applicationId "com.sceyt.chat.demo"
         minSdk min_sdk_version
         targetSdk target_sdk_version
         versionCode app_version_code
