Added presentation directory.

--- a/SceytSimpleChatApp/src/main/AndroidManifest.xml
+++ b/SceytSimpleChatApp/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.SceytUiKit">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +21,7 @@
         </activity>
 
         <activity
-            android:name=".ConversationActivity"
+            android:name=".presentation.ConversationActivity"
             android:exported="false" />
     </application>
 
