--- a/SceytSimpleChatApp/build.gradle
+++ b/SceytSimpleChatApp/build.gradle
@@ -5,11 +5,11 @@ plugins {
 }
 
 android {
-    namespace 'com.sceyt.chat.sceytsimplechatapp'
+    namespace 'com.sceyt.chat.simpleapp'
     compileSdk compile_sdk_version
 
     defaultConfig {
-        applicationId "com.sceyt.chat.sceytsimplechatapp"
+        applicationId "com.sceyt.chat.simpleapp"
         minSdk min_sdk_version
         targetSdk target_sdk_version
         versionCode 1
