--- a/SceytSimpleChatApp/build.gradle
+++ b/SceytSimpleChatApp/build.gradle
@@ -42,20 +42,10 @@ android {
 }
 
 dependencies {
-    implementation 'com.sceyt:sceyt-chat-android-uikit:1.5.0'
+    implementation 'com.sceyt:sceyt-chat-android-uikit:1.5.1'
 
-    implementation supportDependencies.coreKtx
-    implementation supportDependencies.appCompat
-    implementation supportDependencies.material
-    implementation supportDependencies.constraintlayout
-    implementation supportDependencies.recyclerView
-    implementation supportDependencies.fragmentKtx
-    implementation supportDependencies.lifecycleRuntime
-    implementation supportDependencies.glide
-    implementation supportDependencies.okHttp
-    implementation supportDependencies.moshiConverter
-    implementation supportDependencies.jsoup
-    implementation supportDependencies.sdp
-    implementation supportDependencies.ssp
-    implementation supportDependencies.retrofitConverterGason
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
