--- a/settings.gradle
+++ b/settings.gradle
@@ -17,7 +17,7 @@ dependencyResolutionManagement {
         maven { url 'https://jitpack.io' }
     }
 }
-rootProject.name = "SceytUiKit"
+rootProject.name = "SceytDemoApp"
 
 include ':SceytDemoApp'
 include ':SceytChatUiKit'
