--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ dependencyResolutionManagement {
         }
         maven { url = "https://jcenter.bintray.com" }
         maven { url 'https://jitpack.io' }
+        mavenLocal()
     }
 }
 rootProject.name = "SceytDemoApp"
