--- a/SceytDemoApp/build.gradle
+++ b/SceytDemoApp/build.gradle
@@ -19,6 +19,8 @@ android {
 
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
+
+        ndk { abiFilters "arm64-v8a", "armeabi-v7a", "x86", "x86_64" }
     }
     flavorDimensions = ["environment"]
     buildTypes {
