Improved Ui an logic in select user screens. Started creating logic to start a new channel.

--- a/SceytDemoApp/src/main/AndroidManifest.xml
+++ b/SceytDemoApp/src/main/AndroidManifest.xml
@@ -71,7 +71,7 @@
             android:exported="false"
             android:theme="@style/DefaultFontTheme" />
         <activity
-            android:name="com.sceyt.chat.demo.presentation.newchannel.NewChannelActivity"
+            android:name="com.sceyt.chat.demo.presentation.newchannel.StartChatActivity"
             android:exported="false"
             android:theme="@style/DefaultFontTheme" />
         <activity
