Refactored UI to create channel and group.

--- a/SceytDemoApp/build.gradle
+++ b/SceytDemoApp/build.gradle
@@ -83,4 +83,5 @@ dependencies {
     implementation supportDependencies.sdp
     implementation supportDependencies.ssp
     implementation supportDependencies.retrofitConverterGason
+    implementation "com.github.yalantis:ucrop:2.2.8"
 }
