--- a/SceytDemoApp/src/main/AndroidManifest.xml
+++ b/SceytDemoApp/src/main/AndroidManifest.xml
@@ -75,8 +75,13 @@
             android:exported="false"
             android:theme="@style/DefaultFontTheme" />
         <activity
-            android:name="com.sceyt.chat.demo.presentation.creategroup.CreateGroupActivity"
+            android:name="com.sceyt.chat.demo.presentation.createconversation.newgroup.CreateGroupActivity"
             android:exported="false"
+            android:theme="@style/DefaultFontTheme" />
+        <activity
+            android:name=".presentation.createconversation.createchannel.CreateChannelActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/DefaultFontTheme" />
         <activity
             android:name=".presentation.mainactivity.MainActivity"
@@ -85,6 +90,8 @@
             android:launchMode="singleTask"
             android:theme="@style/DefaultFontTheme"
             android:windowSoftInputMode="adjustNothing" />
+
+        <activity android:name="com.yalantis.ucrop.UCropActivity" />
 
         <service
             android:name="com.sceyt.sceytchatuikit.services.SceytFirebaseMessageReceiver"
