--- a/version.gradle
+++ b/version.gradle
@@ -2,6 +2,6 @@ ext {
     // MavenCentral
     maven_central_publish_group = "com.sceyt"
     maven_central_atifact_id = "sceyt-chat-android-uikit"
-    //  maven_central_version = "1.6.20-SNAPSHOT"
-     maven_central_version = "1.5.4"
+     maven_central_version = "1.6.21-SNAPSHOT"
+    //  maven_central_version = "1.5.4"
 }
