--- a/SceytDemoApp/build.gradle
+++ b/SceytDemoApp/build.gradle
@@ -19,6 +19,7 @@ android {
 
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
+        signingConfig signingConfigs.debug
 
         ndk { abiFilters "arm64-v8a", "armeabi-v7a", "x86", "x86_64" }
     }
