--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -63,7 +63,7 @@ ext {
     retrofit_version = '2.9.0'
     room_version = '2.6.1'
 
-    sceyt_sdk_version = '1.5.31'
+    sceyt_sdk_version = '1.5.65-SNAPSHOT'
     sdp_version = '1.1.0'
     ssp_version = '1.1.0'
     swipe_refresh_layout_version = '1.1.0'
