update Sceyt demo build.gradle

--- a/examples/SceytDemoApp/build.gradle
+++ b/examples/SceytDemoApp/build.gradle
@@ -26,6 +26,7 @@ android {
     flavorDimensions = ["environment"]
     buildTypes {
         release {
+            signingConfig signingConfigs.debug
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
