--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -71,6 +71,14 @@ ext {
     work_version = '2.9.0'
     wave_seek_bar_version = "5.0.2"
 
+    // Test dependencies versions
+    junit_version = '1.1.5'
+    truth_version = '1.0.1'
+    espresso_version = '3.5.1'
+    mockito_version = '5.4.0'
+    core_testing_version = '2.2.0'
+    kotlinx_coroutines_test_version = '1.4.1'
+
     supportDependencies = [
             appCompat             : "androidx.appcompat:appcompat:$app_compat_version",
             asyncLayoutInflater   : "androidx.asynclayoutinflater:asynclayoutinflater:$async_layout_inflater_version",
@@ -117,5 +125,13 @@ ext {
             workRuntimeKtx        : "androidx.work:work-runtime-ktx:$work_version",
             waveSeekBar           : "com.github.massoudss:waveformSeekBar:$wave_seek_bar_version",
             photoView             : "com.github.chrisbanes:PhotoView:$photo_view_version",
+
+            //Test dependencies versions
+            junit                 : "androidx.test.ext:junit-ktx:$junit_version",
+            coreTesting           : "androidx.arch.core:core-testing:$core_testing_version",
+            coroutinesTest        : "org.jetbrains.kotlinx:kotlinx-coroutines-test:$kotlinx_coroutines_test_version",
+            espresso              : "androidx.test.espresso:espresso-core:$espresso_version",
+            mockito               : "org.mockito:mockito-core:$mockito_version",
+            truth                 : "com.google.truth:truth:$truth_version",
     ]
 }
