Update gradle dependencies.

--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -47,50 +47,49 @@ android {
 
 
 dependencies {
-    api supportDependencies.appCompat
-    api supportDependencies.material
-    api supportDependencies.constraintlayout
-    api supportDependencies.recyclerView
-    api supportDependencies.fragmentKtx
-    api supportDependencies.coreKtx
-    api supportDependencies.sceytSdk
-    api supportDependencies.lifecycleRuntime
-    api supportDependencies.liveDataKtx
-    api supportDependencies.liveEvent
-    api supportDependencies.glide
-    api supportDependencies.glideTransformations
-    api supportDependencies.ion
-    api supportDependencies.firebaseBom
-    api supportDependencies.firebaseMessaging
-    annotationProcessor supportDependencies.roomCompiler
-    kapt supportDependencies.roomCompiler
-    api supportDependencies.roomRuntime
-    api supportDependencies.roomKtx
-    api supportDependencies.koinAndroid
-    api supportDependencies.exoPlayerMedia
-    api supportDependencies.exoPlayerUi
-    api supportDependencies.lottie
-    api supportDependencies.asyncLayoutInflater
-    api supportDependencies.moshiConverter
-    api supportDependencies.jsoup
-    api supportDependencies.flexbox
-    api supportDependencies.sdp
-    api supportDependencies.ssp
-    api supportDependencies.lightCompressor
-    api supportDependencies.workRuntimeKtx
-    api supportDependencies.waveSeekBar
-    api supportDependencies.photoView
-    api supportDependencies.emojiBundled
-    api supportDependencies.vanniktechGoogleEmoji
-    api supportDependencies.googleCodeLibPhone
-
+    api libs.appcompat
+    api libs.material
+    api libs.constraintlayout
+    api libs.recyclerview
+    api libs.fragment.ktx
+    api libs.core.ktx
+    api libs.sceyt.chat.android.sdk
+    api libs.lifecycle.runtime.ktx
+    api libs.lifecycle.livedata.ktx
+    api libs.liveevent
+    api libs.glide
+    api libs.glide.transformations
+    api libs.ion
+    api libs.firebase.messaging.ktx
+    annotationProcessor libs.room.compiler
+    //noinspection KaptUsageInsteadOfKsp
+    kapt libs.room.compiler
+    api libs.room.runtime
+    api libs.room.ktx
+    api libs.koin.android
+    api libs.media3.exoplayer
+    api libs.media3.ui
+    api libs.lottie
+    api libs.asynclayoutinflater.appcompat
+    api libs.converter.moshi
+    api libs.jsoup
+    api libs.flexbox
+    api libs.sdp.android
+    api libs.ssp.android
+    api libs.light.compressor
+    api libs.work.runtime.ktx
+    api libs.waveformSeekBar
+    api libs.photo.view
+    api libs.emoji2.bundled
+    api libs.emoji.google
+    api libs.libphonenumber
 
     // Instrumented Unit Tests
-    androidTestImplementation supportDependencies.junit
-    androidTestImplementation supportDependencies.coreTesting
-    androidTestImplementation supportDependencies.espresso
-    androidTestImplementation supportDependencies.mockito
-    androidTestImplementation supportDependencies.coroutinesTest
-    androidTestImplementation supportDependencies.truth
+    androidTestImplementation libs.junit.ktx
+    androidTestImplementation libs.core.testing
+    androidTestImplementation libs.espresso.core
+    androidTestImplementation libs.mockito.core
+    androidTestImplementation libs.kotlinx.coroutines.test
+    androidTestImplementation libs.truth
 }
 apply from: "${rootProject.projectDir}/maven-publish/publish-module.gradle"
