Fix issue to update LoadRange.

--- a/maven-publish/publish-module-git.gradle
+++ b/maven-publish/publish-module-git.gradle
@@ -9,6 +9,7 @@ def getArtifactId = { ->
 }
 
 tasks.register('sourceJar', Jar) {
+    from android.sourceSets.main.java.srcDirs
     archiveClassifier = "sources"
 }
 
