--- a/examples/SceytDemoApp/build.gradle
+++ b/examples/SceytDemoApp/build.gradle
@@ -37,7 +37,7 @@ android {
         prod {
             dimension = "environment"
             isDefault = true
-            buildConfigField("String", "HOST", "\"https://us-ohio-api.sceyt.com\"")
+            buildConfigField("String", "API_URL", "\"https://us-ohio-api.sceyt.com\"")
             buildConfigField("String", "APP_ID", "\"8lwox2ge93\"")
             buildConfigField("String", "GEN_TOKEN_BASE_URL", "\"https://tlnig20qy7.execute-api.us-east-2.amazonaws.com\"")
             buildConfigField("String", "GEN_TOKEN_ENDPOINT", "\"/dev/user/genToken\"")
@@ -45,7 +45,7 @@ android {
 
         staging {
             dimension = "environment"
-            buildConfigField("String", "HOST", "\"https://uk-london-south-api-2-staging.waafi.com\"")
+            buildConfigField("String", "API_URL", "\"https://uk-london-south-api-2-staging.waafi.com\"")
             buildConfigField("String", "APP_ID", "\"yzr58x11rm\"")
             buildConfigField("String", "GEN_TOKEN_BASE_URL", "\"https://hm25ehfh6i.execute-api.eu-central-1.amazonaws.com/\"")
             buildConfigField("String", "GEN_TOKEN_ENDPOINT", "\"/load-test/user/genToken\"")
