--- a/version.gradle
+++ b/version.gradle
@@ -3,5 +3,5 @@ ext {
     maven_central_publish_group = "com.sceyt"
     maven_central_atifact_id = "sceyt-chat-android-uikit"
     maven_central_version = "1.6.955-SNAPSHOT"
-    //maven_central_version = "1.5.8"
+    maven_central_version = "1.5.9"
 }
