--- a/version.gradle
+++ b/version.gradle
@@ -2,6 +2,6 @@ ext {
     // MavenCentral
     maven_central_publish_group = "com.sceyt"
     maven_central_atifact_id = "sceyt-chat-android-uikit"
-    //maven_central_version = "1.6.955-SNAPSHOT"
-    maven_central_version = "1.5.9"
+    maven_central_version = "1.6.96-SNAPSHOT"
+    //maven_central_version = "1.5.9"
 }
