Fix issue to set reply message container color. Version "1.6.97-SNAPSHOT".

--- a/examples/SceytDemoApp/src/main/AndroidManifest.xml
+++ b/examples/SceytDemoApp/src/main/AndroidManifest.xml
@@ -60,7 +60,7 @@
         </activity>
 
         <activity
-            android:name="com.sceyt.chatuikit.presentation.uicomponents.conversation.SceytChatActivity"
+            android:name="com.sceyt.chatuikit.presentation.uicomponents.conversation.SceytConversationActivity"
             android:exported="false"
             android:theme="@style/DefaultFontTheme"
             android:windowSoftInputMode="adjustResize" />
