--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ emojiGoogle = "0.18.0"
 espressoCore = "3.6.1"
 firebaseMessagingKtx = "24.0.0"
 flexbox = "3.0.0"
-fragmentKtx = "1.8.1"
+fragmentKtx = "1.8.2"
 glide = "4.16.0"
 glideTransformations = "4.3.0"
 gson = "2.10.1"
@@ -18,21 +18,21 @@ ion = "3.1.0"
 jsoup = "1.17.2"
 junit = "4.13.2"
 junitKtx = "1.2.1"
-koinAndroid = "3.5.6"
+koinAndroid = "3.3.3"
 kotlinxCoroutinesTest = "1.8.0"
 libphonenumber = "8.13.31"
-lifecycleRuntimeKtx = "2.8.3"
+lifecycleRuntimeKtx = "2.8.4"
 lightcompressor = "1.0.1"
 lottie = "6.4.0"
 material = "1.12.0"
-media3Exoplayer = "1.3.1"
+media3Exoplayer = "1.4.0"
 mockitoCore = "5.11.0"
 okhttp = "5.0.0-alpha.12"
 okio = "3.8.0"
 photoview = "2.3.0"
 recyclerview = "1.3.2"
 room = "2.6.1"
-sceytChatAndroidSdk = "1.5.35"
+sceytChatAndroidSdk = "1.6.0-SNAPSHOT"
 sdpAndroid = "1.1.0"
 sspAndroid = "1.1.0"
 truth = "1.4.2"
