--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -47,45 +47,45 @@ android {
 }
 
 dependencies {
-    api libs.appcompat
-    api libs.material
-    api libs.constraintlayout
-    api libs.recyclerview
-    api libs.fragment.ktx
-    api libs.core.ktx
+    implementation libs.appcompat
+    implementation libs.material
+    implementation libs.constraintlayout
+    implementation libs.recyclerview
+    implementation libs.fragment.ktx
+    implementation libs.core.ktx
     api libs.sceyt.chat.android.sdk
-    api libs.lifecycle.runtime.ktx
-    api libs.lifecycle.livedata.ktx
-    api libs.glide
-    api libs.glide.transformations
-    api libs.ion
-    api libs.firebase.messaging.ktx
+    api libs.koin.android
+    implementation libs.lifecycle.runtime.ktx
+    implementation libs.lifecycle.livedata.ktx
+    implementation libs.glide
+    implementation libs.glide.transformations
+    implementation libs.ion
+    implementation libs.firebase.messaging.ktx
     annotationProcessor libs.room.compiler
     //noinspection KaptUsageInsteadOfKsp
     kapt libs.room.compiler
-    api libs.room.runtime
-    api libs.room.ktx
-    api libs.koin.android
-    api libs.media3.exoplayer
-    api libs.media3.ui
-    api libs.lottie
-    api libs.jsoup
-    api libs.flexbox
-    api libs.sdp.android
-    api libs.ssp.android
-    api libs.light.compressor
-    api libs.work.runtime.ktx
-    api libs.waveformSeekBar
-    api libs.photo.view
-    api libs.emoji2.bundled
-    api libs.emoji.google
-    api libs.libphonenumber
-    api libs.ucrop
+    implementation libs.room.runtime
+    implementation libs.room.ktx
+    implementation libs.media3.exoplayer
+    implementation libs.media3.ui
+    implementation libs.lottie
+    implementation libs.jsoup
+    implementation libs.flexbox
+    implementation libs.sdp.android
+    implementation libs.ssp.android
+    implementation libs.light.compressor
+    implementation libs.work.runtime.ktx
+    implementation libs.waveformSeekBar
+    implementation libs.photo.view
+    implementation libs.emoji2.bundled
+    implementation libs.emoji.google
+    implementation libs.libphonenumber
+    implementation libs.ucrop
 
 
     // Overriding the version of the library
-    api libs.gson
-    api libs.okio
+    implementation libs.gson
+    implementation libs.okio
 
     // Instrumented Unit Tests
     androidTestImplementation libs.junit.ktx
