--- a/SceytChatUiKit/src/main/AndroidManifest.xml
+++ b/SceytChatUiKit/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -69,6 +71,11 @@
             android:exported="false"
             android:theme="@style/DefaultFontTheme" />
 
+        <activity
+            android:name=".presentation.uicomponents.locationpreview.LocationPreviewActivity"
+            android:exported="false"
+            android:theme="@style/DefaultFontTheme" />
+
         <activity android:name="com.yalantis.ucrop.UCropActivity" />
 
         <provider
@@ -94,6 +101,10 @@
             android:name="androidx.work.impl.foreground.SystemForegroundService"
             android:foregroundServiceType="dataSync"
             tools:node="merge" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="YOUR_API_KEY" />
 
     </application>
 
