--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,7 +32,7 @@ okio = "3.9.0"
 photoview = "2.3.0"
 recyclerview = "1.3.2"
 room = "2.6.1"
-sceytChatAndroidSdk = "1.6.1-SNAPSHOT"
+sceytChatAndroidSdk = "1.6.111111111111-SNAPSHOT"
 sdpAndroid = "1.1.1"
 sspAndroid = "1.1.1"
 truth = "1.4.4"
