--- a/SceytChatUiKit/src/main/AndroidManifest.xml
+++ b/SceytChatUiKit/src/main/AndroidManifest.xml
@@ -21,34 +21,35 @@
         android:required="false" />
 
     <application android:requestLegacyExternalStorage="true">
+
         <activity
-            android:name="com.sceyt.chatuikit.presentation.components.channel.messages.ChannelActivity"
+            android:name=".presentation.components.channel.messages.ChannelActivity"
             android:exported="false"
             android:theme="@style/DefaultFontTheme"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name="com.sceyt.chatuikit.presentation.components.channel_info.ChannelInfoActivity"
+            android:name=".presentation.components.channel_info.ChannelInfoActivity"
             android:exported="false"
             android:theme="@style/DefaultFontTheme"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".presentation.components.media.MediaPreviewActivity"
             android:theme="@style/SceytPreviewThemeDark" />
-
         <activity
             android:name=".presentation.components.forward.ForwardActivity"
             android:theme="@style/DefaultFontTheme" />
-
         <activity
             android:name=".presentation.components.share.ShareActivity"
             android:theme="@style/DefaultFontTheme" />
-
         <activity
             android:name=".presentation.components.channel_info.preview.ImagePreviewActivity"
             android:theme="@style/DefaultFontTheme" />
-
         <activity
             android:name=".presentation.components.role.ChangeRoleActivity"
+            android:exported="false"
+            android:theme="@style/DefaultFontTheme" />
+        <activity
+            android:name=".presentation.components.message_info.MessageInfoActivity"
             android:exported="false"
             android:theme="@style/DefaultFontTheme" />
         <activity
@@ -68,7 +69,6 @@
             android:name=".presentation.components.create_chat.create_group.CreateGroupActivity"
             android:exported="false"
             android:theme="@style/DefaultFontTheme" />
-
         <activity android:name="com.yalantis.ucrop.UCropActivity" />
 
         <provider
@@ -84,17 +84,14 @@
         <service
             android:name=".services.SceytFirebaseMessageReceiver"
             android:exported="false">
-
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
         <service
             android:name="androidx.work.impl.foreground.SystemForegroundService"
             android:foregroundServiceType="dataSync"
             tools:node="merge" />
-
     </application>
 
 </manifest>
