--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -13,6 +13,8 @@ android {
         minSdk min_sdk_version
         targetSdk target_sdk_version
 
+        buildConfigField("String", "MAVEN_VERSION", "\"$maven_central_version\"")
+
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
