--- a/examples/SceytDemoApp/src/main/AndroidManifest.xml
+++ b/examples/SceytDemoApp/src/main/AndroidManifest.xml
@@ -27,8 +27,7 @@
 
         <activity
             android:name=".presentation.SplashActivity"
-            android:exported="true"
-            android:theme="@style/SceytAppTheme">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -55,12 +54,12 @@
         <activity
             android:name=".presentation.login.LoginActivity"
             android:exported="false"
-            android:theme="@style/DefaultFontTheme"
+            android:theme="@style/SceytAppTheme.Default"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".presentation.main.MainActivity"
             android:exported="true"
-            android:theme="@style/DefaultFontTheme"
+            android:theme="@style/SceytAppTheme.Default"
             android:windowSoftInputMode="adjustNothing"/>
 
         <service
