--- a/examples/SceytDemoApp/src/main/AndroidManifest.xml
+++ b/examples/SceytDemoApp/src/main/AndroidManifest.xml
@@ -52,12 +52,20 @@
 
         </activity>
         <activity
+
             android:name=".presentation.login.LoginActivity"
             android:exported="false"
             android:theme="@style/SceytAppTheme.Default"
             android:windowSoftInputMode="adjustResize" />
+
         <activity
             android:name=".presentation.main.MainActivity"
+            android:exported="true"
+            android:theme="@style/SceytAppTheme.Default"
+            android:windowSoftInputMode="adjustNothing"/>
+
+        <activity
+            android:name=".presentation.login.LoginActivityNew"
             android:exported="true"
             android:theme="@style/SceytAppTheme.Default"
             android:windowSoftInputMode="adjustNothing"/>
