--- a/examples/SceytDemoApp/src/main/AndroidManifest.xml
+++ b/examples/SceytDemoApp/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:theme="@style/SceytAppTheme">
 
         <activity
-            android:name=".presentation.SplashActivity"
+            android:name=".presentation.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
