add username validation logic

--- a/examples/SceytDemoApp/build.gradle
+++ b/examples/SceytDemoApp/build.gradle
@@ -41,6 +41,7 @@ android {
             buildConfigField("String", "APP_ID", "\"8lwox2ge93\"")
             buildConfigField("String", "GEN_TOKEN_BASE_URL", "\"https://tlnig20qy7.execute-api.us-east-2.amazonaws.com\"")
             buildConfigField("String", "GEN_TOKEN_ENDPOINT", "\"/dev/user/genToken\"")
+            buildConfigField("String", "VALIDATION_API_URL", "\"https://ebttn1ks2l.execute-api.us-east-2.amazonaws.com/\"")
         }
 
         staging {
@@ -49,6 +50,7 @@ android {
             buildConfigField("String", "APP_ID", "\"yzr58x11rm\"")
             buildConfigField("String", "GEN_TOKEN_BASE_URL", "\"https://hm25ehfh6i.execute-api.eu-central-1.amazonaws.com/\"")
             buildConfigField("String", "GEN_TOKEN_ENDPOINT", "\"/load-test/user/genToken\"")
+            buildConfigField("String", "VALIDATION_API_URL", "\"https://ebttn1ks2l.execute-api.us-east-2.amazonaws.com/\"")
         }
     }
 
