--- a/examples/SceytDemoApp/src/main/AndroidManifest.xml
+++ b/examples/SceytDemoApp/src/main/AndroidManifest.xml
@@ -56,13 +56,13 @@
             android:name=".presentation.main.MainActivity"
             android:exported="true"
             android:theme="@style/SceytAppTheme.Default"
-            android:windowSoftInputMode="adjustNothing"/>
+            android:windowSoftInputMode="adjustResize"/>
 
         <activity
             android:name=".presentation.welcome.WelcomeActivity"
             android:exported="true"
             android:theme="@style/SceytAppTheme.Default"
-            android:windowSoftInputMode="adjustNothing"/>
+            android:windowSoftInputMode="adjustResize"/>
 
         <service
             android:name="com.sceyt.chatuikit.services.SceytFirebaseMessageReceiver"
