--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '2.0.20' apply false
     id 'com.google.gms.google-services' version '4.4.2' apply false
     id 'io.github.gradle-nexus.publish-plugin' version '1.3.0' apply false
+    id 'com.google.firebase.crashlytics' version "3.0.2" apply false
 }
 
 apply from: 'dependencies.gradle'
