--- a/examples/SceytDemoApp/build.gradle
+++ b/examples/SceytDemoApp/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -75,7 +76,6 @@ dependencies {
     implementation libs.appcompat
     implementation libs.material
     implementation libs.core.ktx
-    implementation libs.firebase.messaging.ktx
     implementation libs.constraintlayout
     implementation libs.recyclerview
     implementation libs.fragment.ktx
@@ -89,4 +89,10 @@ dependencies {
     implementation libs.ssp.android
     implementation libs.converter.gson
     implementation libs.ucrop
+
+    // Firebase
+    implementation(platform(libs.firebase.bom))
+    implementation(libs.firebase.crashlytics)
+    implementation(libs.firebase.analytics)
+    implementation libs.firebase.messaging.ktx
 }
