--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -99,9 +99,9 @@ dependencies {
     testImplementation libs.junit
     testImplementation libs.truth
     testImplementation libs.kotlinx.coroutines.test
-    testImplementation "org.mockito:mockito-core:5.14.2"
-    testImplementation "org.mockito:mockito-inline:5.1.0"
-    testImplementation "org.mockito.kotlin:mockito-kotlin:5.0.0"
+    testImplementation libs.mockito.core
+    testImplementation libs.mockito.inline
+    testImplementation libs.mockito.kotlin
 
     // Koin testing tools
     testImplementation libs.koin.test
