--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,20 +20,22 @@ jsoup = "1.18.3"
 junit = "4.13.2"
 junitKtx = "1.2.1"
 koinAndroid = "3.5.0"
-kotlinxCoroutinesTest = "1.9.0"
-libphonenumber = "8.13.51"
+kotlinxCoroutinesTest = "1.10.1"
+libphonenumber = "8.13.52"
 lifecycleRuntimeKtx = "2.8.7"
 lightcompressor = "1.0.1"
-lottie = "6.6.1"
+lottie = "6.6.2"
 material = "1.12.0"
-media3Exoplayer = "1.5.0"
+media3Exoplayer = "1.5.1"
 mockitoCore = "5.14.2"
+mockitoInline = "5.2.0"
+mockitoKotlin = "5.4.0"
 okhttp = "5.0.0-alpha.14"
 okio = "3.9.1"
 photoview = "2.3.0"
 recyclerview = "1.3.2"
 room = "2.6.1"
-sceytChatAndroidSdk = "1.6.49-SNAPSHOT"
+sceytChatAndroidSdk = "1.6.6"
 sdpAndroid = "1.1.1"
 sspAndroid = "1.1.1"
 truth = "1.4.4"
@@ -77,6 +79,8 @@ material = { module = "com.google.android.material:material", version.ref = "mat
 media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3Exoplayer" }
 media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3Exoplayer" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
+mockito-inline = { module = "org.mockito:mockito-inline", version.ref = "mockitoInline" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoKotlin" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 photo-view = { module = "com.github.chrisbanes:PhotoView", version.ref = "photoview" }
