Add notification body formatter. Add cancel notification logic. Add logic to handle notification click. Improved logic to handle notifications.

--- a/SceytChatUiKit/src/main/AndroidManifest.xml
+++ b/SceytChatUiKit/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity
             android:name=".presentation.components.channel.messages.ChannelActivity"
             android:exported="false"
+            android:launchMode="singleTask"
             android:theme="@style/DefaultFontTheme"
             android:windowSoftInputMode="adjustResize" />
         <activity
