--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,7 +35,7 @@ okio = "3.9.1"
 photoview = "2.3.0"
 recyclerview = "1.3.2"
 room = "2.6.1"
-sceytChatAndroidSdk = "1.6.8"
+sceytChatAndroidSdk = "1.6.72-SNAPSHOT"
 sdpAndroid = "1.1.1"
 sspAndroid = "1.1.1"
 truth = "1.4.4"
