--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ coreTesting = "2.2.0"
 emoji2Bundled = "1.5.0"
 emojiGoogle = "0.21.0"
 espressoCore = "3.6.1"
-firebaseBom = "33.7.0"
+firebaseBom = "33.8.0"
 firebaseMessagingKtx = "24.1.0"
 flexbox = "3.0.0"
 fragmentKtx = "1.8.5"
@@ -43,6 +43,8 @@ ucrop = "2.2.8"
 waveformseekbar = "5.0.2"
 workRuntimeKtx = "2.10.0"
 playServicesBase = "18.5.0"
+agp = "8.3.2"
+kotlin = "2.0.20"
 
 [libraries]
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
@@ -99,4 +101,5 @@ work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "w
 play-services-base = { group = "com.google.android.gms", name = "play-services-base", version.ref = "playServicesBase" }
 
 [plugins]
-
+android-library = { id = "com.android.library", version.ref = "agp" }
+jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
