--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ dependencyResolutionManagement {
         }
         maven { url = "https://jcenter.bintray.com" }
         maven { url 'https://jitpack.io' }
+        maven {url "https://developer.huawei.com/repo/"}
         mavenLocal()
     }
 }
@@ -23,3 +24,4 @@ rootProject.name = "SceytUiKit"
 include ':SceytChatUiKit'
 include ':SceytDemoApp'
 project(':SceytDemoApp').projectDir = file("./examples/SceytDemoApp")
+include ':HuaweiMessagingService'
