--- a/maven-publish/publish-root.gradle
+++ b/maven-publish/publish-root.gradle
@@ -1,5 +1,5 @@
 // Create variables with empty default values
-apply from: "$project.rootDir/uikit_version.gradle"
+apply from: "$project.rootDir/version.gradle"
 
 
 ext["ossrhUsername"] = ''
