--- a/examples/SceytDemoApp/src/main/AndroidManifest.xml
+++ b/examples/SceytDemoApp/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
         android:theme="@style/SceytAppTheme">
 
         <activity
@@ -61,13 +62,13 @@
             android:name=".presentation.main.MainActivity"
             android:exported="true"
             android:theme="@style/SceytAppTheme.Default"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize" />
 
         <activity
             android:name=".presentation.welcome.WelcomeActivity"
             android:exported="true"
             android:theme="@style/SceytAppTheme.Default"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize" />
 
         <service
             android:name="com.sceyt.chatuikit.services.SceytFirebaseMessageReceiver"
