keep video played position during screen rotation

--- a/SceytChatUiKit/src/main/AndroidManifest.xml
+++ b/SceytChatUiKit/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".presentation.components.media.MediaPreviewActivity"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:theme="@style/SceytPreviewThemeDark" />
         <activity
             android:name=".presentation.components.forward.ForwardActivity"
