- Update ChatSdk version

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,7 +35,7 @@ okio = "3.11.0"
 photoview = "2.3.0"
 recyclerview = "1.4.0"
 room = "2.7.1"
-sceytChatAndroidSdk = "1.7.01-SNAPSHOT"
+sceytChatAndroidSdk = "1.7.1"
 sdpAndroid = "1.1.1"
 sspAndroid = "1.1.1"
 truth = "1.4.4"
