--- a/maven-publish/publish-root.gradle
+++ b/maven-publish/publish-root.gradle
@@ -32,8 +32,8 @@ nexusPublishing {
             password = ossrhPassword
             version Config.mavenCentralVersion
 
-            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
-            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
         }
     }
 }
