--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.iml
 .gradle
 /local.properties
+/gradle.properties
 /.idea
 .DS_Store
 /build
@@ -8,4 +9,5 @@
 .externalNativeBuild
 .cxx
 local.properties
+gradle.properties
 /.kotlin/sessions
