--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,6 +34,7 @@ okhttp = "5.0.0-alpha.14"
 okio = "3.11.0"
 photoview = "2.3.0"
 recyclerview = "1.4.0"
+robolectric = "4.15"
 room = "2.7.1"
 sceytChatAndroidSdk = "1.7.2"
 sdpAndroid = "1.1.1"
@@ -89,6 +90,7 @@ okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 photo-view = { module = "com.github.chrisbanes:PhotoView", version.ref = "photoview" }
 recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
+robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
