--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,7 +21,7 @@ junit = "4.13.2"
 junitKtx = "1.2.1"
 koinAndroid = "3.5.0"
 kotlinxCoroutinesTest = "1.10.2"
-libphonenumber = "9.0.8"
+libphonenumber = "9.0.9"
 lifecycleRuntimeKtx = "2.9.1"
 lottie = "6.6.7"
 material = "1.12.0"
@@ -29,8 +29,8 @@ media3Exoplayer = "1.7.1"
 mockitoCore = "5.18.0"
 mockitoInline = "5.2.0"
 mockitoKotlin = "5.4.0"
-okhttp = "5.0.0-alpha.17"
-okio = "3.14.0"
+okhttp = "5.0.0"
+okio = "3.15.0"
 photoview = "2.3.0"
 recyclerview = "1.4.0"
 robolectric = "4.15.1"
