--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,7 +28,7 @@ media3Exoplayer = "1.7.1"
 mockitoCore = "5.18.0"
 mockitoInline = "5.2.0"
 mockitoKotlin = "5.4.0"
-okhttp = "5.0.0"
+okhttp = "5.0.0-alpha.14"
 okio = "3.15.0"
 photoview = "2.3.0"
 recyclerview = "1.4.0"
