--- a/SceytChatUiKit/src/main/AndroidManifest.xml
+++ b/SceytChatUiKit/src/main/AndroidManifest.xml
@@ -65,8 +65,7 @@
         <activity
             android:name=".presentation.components.create_chat.create_channel.CreateChannelActivity"
             android:exported="false"
-            android:theme="@style/DefaultFontTheme"
-            android:windowSoftInputMode="adjustResize" />
+            android:theme="@style/DefaultFontTheme" />
         <activity
             android:name=".presentation.components.create_chat.create_group.CreateGroupActivity"
             android:exported="false"
