--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ coreKtx = "1.16.0"
 coreTesting = "2.2.0"
 emoji2Bundled = "1.5.0"
 emojiGoogle = "0.21.0"
-espressoCore = "3.6.1"
+espressoCore = "3.7.0"
 firebaseBom = "34.0.0"
 firebaseMessagingKtx = "24.1.2"
 flexbox = "3.0.0"
@@ -17,30 +17,30 @@ glideTransformations = "4.3.0"
 gson = "2.13.1"
 jsoup = "1.21.1"
 junit = "4.13.2"
-junitKtx = "1.2.1"
+junitKtx = "1.3.0"
 koinAndroid = "3.5.0"
 kotlinxCoroutinesTest = "1.10.2"
 libphonenumber = "9.0.10"
 lifecycleRuntimeKtx = "2.9.2"
 lottie = "6.6.7"
 material = "1.12.0"
-media3Exoplayer = "1.7.1"
+media3Exoplayer = "1.8.0"
 mockitoCore = "5.18.0"
 mockitoInline = "5.2.0"
 mockitoKotlin = "6.0.0"
 okhttp = "5.0.0-alpha.14"
-okio = "3.15.0"
+okio = "3.16.0"
 photoview = "2.3.0"
 recyclerview = "1.4.0"
 robolectric = "4.15.1"
 room = "2.7.2"
-sceytChatAndroidSdk = "1.7.7"
+sceytChatAndroidSdk = "1.7.801-SNAPSHOT"
 sdpAndroid = "1.1.1"
 sspAndroid = "1.1.1"
 truth = "1.4.4"
 ucrop = "2.2.10"
 waveformseekbar = "5.0.2"
-workRuntimeKtx = "2.10.2"
+workRuntimeKtx = "2.10.3"
 lifecycleProcess = "2.9.2"
 google-services = "4.4.3"
 firebase-crashlytics = "3.0.5"
