--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,7 +25,7 @@ lifecycleRuntimeKtx = "2.9.4"
 lottie = "6.6.7"
 material = "1.13.0"
 media3Exoplayer = "1.8.0"
-mockitoCore = "5.19.0"
+mockitoCore = "5.20.0"
 mockitoInline = "5.2.0"
 mockitoKotlin = "6.0.0"
 okhttp = "5.1.0"
@@ -33,7 +33,7 @@ photoview = "2.3.0"
 recyclerview = "1.4.0"
 robolectric = "4.16"
 room = "2.8.0"
-sceytChatAndroidSdk = "1.7.915-SNAPSHOT"
+sceytChatAndroidSdk = "1.8.0"
 sdpAndroid = "1.1.1"
 sspAndroid = "1.1.1"
 truth = "1.4.5"
